--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:daemon": "forever start src/index.ts",
+    "stop:daemon": "forever stop src/index.ts",
+    "test:load": "artillery run artillery.yml",
     "dev": "nodemon src/index.ts"
   },
   "keywords": [],
@@ -19,8 +21,9 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.30",
     "@types/nodemailer": "^6.4.14",
-    "@types/nodemailer-smtp-transport": "^2.7.8",
     "@types/pg": "^8.11.4",
+    "artillery": "^2.0.8",
+    "forever": "^4.0.3",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
