--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start:daemon": "forever start src/index.ts",
     "stop:daemon": "forever stop src/index.ts",
     "test:load": "artillery run artillery.yml",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "start": "node dist/index.js",
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
+    "build": "tsc -p ."
   },
   "keywords": [],
   "author": "",
